# python-for-data-science

./: README.md
1 - Setting up a Python Project/: README.md
1 - Setting up a Python Project/solution/src/: main.py  paths.py
1 - Setting up a Python Project/solution/src/output/: power_load_output.py
1 - Setting up a Python Project/solution/src/sourcing/: power_load_sourcing.py
1 - Setting up a Python Project/solution/test/e2e/: test_pipeline.py
1 - Setting up a Python Project/solutions/: pyproject.toml
1 - Setting up a Python Project/solutions/src/processing/: power_load_processing.py
1 - Setting up a Python Project/solutions/test/unit/: test_processing.py
2 - Basic Polars/: README.md
2 - Basic Polars/solution/: pyproject.toml
2 - Basic Polars/solution/notebooks/: EF01 - Polars Tutorial.ipynb
