[project]
name = "seminar2"
version = "0.1.0"
description = "Explore power load data with Polars"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.11.6",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.9.0",
    "xlsxwriter>=3.2.0",
]

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2.5",
]
